--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-prerender-plugin": "^0.5.11"
   }
 }
