--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.539.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
